--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ HW4/*
 # But not these files...
 
 !HW1/HW1.ipynb
-!HW1/Hw1_Jordi_Morera.pdf
+!HW1/HW1_Jordi_Morera.pdf
 !HW2/HW2.ipynb
 !HW2/HW2_Jordi_Morera.pdf
 !HW3/HW3.ipynb
